feat:Added registration 2
